Правит переполнение карточек в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -292,8 +292,10 @@
               </div>
               <div class="product-foo">
                 <a href="#" class="product-name links">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-                <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
               </div>
+            </div>
+            <div class="product-foo-hidden">
+              <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </li>
           <li class="catalog-item">
@@ -307,8 +309,10 @@
               </div>
               <div class="product-foo">
                 <a href="#" class="product-name links">Сливочно-кофейное с кусочками шоколада</a>
-                <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
               </div>
+            </div>
+            <div class="product-foo-hidden">
+              <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </li>
           <li class="catalog-item">
@@ -322,8 +326,10 @@
               </div>
               <div class="product-foo">
                 <a href="#" class="product-name links">Сливочно-клубничное с присыпкой из белого шоколада</a>
-                <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
               </div>
+            </div>
+            <div class="product-foo-hidden">
+              <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </li>
           <li class="catalog-item">
@@ -337,8 +343,10 @@
               </div>
               <div class="product-foo">
                 <a href="#" class="product-name links">Сливочное крем-брюле с карамельной подливкой</a>
-                <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
               </div>
+            </div>
+            <div class="product-foo-hidden">
+              <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </li>
           <li class="catalog-item">
@@ -352,9 +360,11 @@
               </div>
               <div class="product-foo">
                 <a href="#" class="product-name links">Сливочное с брусничным джемом</a>
-                <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
               </div>
             </div>
+            <div class="product-foo-hidden">
+              <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
+            </div>            
           </li>
           <li class="catalog-item">
             <div class="catalog-item-inner">
@@ -367,8 +377,10 @@
               </div>
               <div class="product-foo">
                 <a href="#" class="product-name links">Сливочно-черничное с цельными ягодами черники</a>
-                <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
               </div>
+            </div>
+            <div class="product-foo-hidden">
+              <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </li>
           <li class="catalog-item">
@@ -382,8 +394,10 @@
               </div>
               <div class="product-foo">
                 <a href="#" class="product-name links">Сливочно-лимонное с карамельной присыпкой</a>
-                <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
               </div>
+            </div>
+            <div class="product-foo-hidden">
+              <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </li>
           <li class="catalog-item">
@@ -397,8 +411,10 @@
               </div>
               <div class="product-foo">
                 <a href="#" class="product-name links">Сливочное с шоколадной стружкой</a>
-                <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
               </div>
+            </div>
+            <div class="product-foo-hidden">
+              <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </li>
           <li class="catalog-item">
@@ -412,8 +428,10 @@
               </div>
               <div class="product-foo">
                 <a href="#" class="product-name links">Сливочно-ванильное с кусочками шоколада</a>
-                <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
               </div>
+            </div>
+            <div class="product-foo-hidden">
+              <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </li>
           <li class="catalog-item">
@@ -427,8 +445,10 @@
               </div>
               <div class="product-foo">
                 <a href="#" class="product-name links">Сливочное с ментоловым сиропом</a>
-                <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
               </div>
+            </div>
+            <div class="product-foo-hidden">
+              <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </li>
           <li class="catalog-item">
@@ -442,8 +462,10 @@
               </div>
               <div class="product-foo">
                 <a href="#" class="product-name links">Сливочное с кусочками черного шоколада</a>
-                <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
               </div>
+            </div>
+            <div class="product-foo-hidden">
+              <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </li>
           <li class="catalog-item">
@@ -457,8 +479,10 @@
               </div>
               <div class="product-foo">
                 <a href="#" class="product-name links">Сливочное с мятным сиропом</a>
-                <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
               </div>
+            </div>
+            <div class="product-foo-hidden">
+              <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </li>
         </ul>
