Добавляет правки для ховерка в модальном окне

--- a/index.html
+++ b/index.html
@@ -406,13 +406,13 @@
                 <p class="callback-header">Мы обязательно вам ответим!</p>
                 <form class="callback-form" action="https://echo.htmlacademy.ru/" id="callback-form" method="GET" >
                   <p class="callback-name">
-                    <input class="type-text"  type="text" id="callback-text-name" name="callback-form" placeholder="Как вас зовут?" aria-label="Введите выше имя." required>
+                    <input class="type-text callback-input-hover"  type="text" id="callback-text-name" name="callback-form" placeholder="Как вас зовут?" aria-label="Введите выше имя." required>
                   </p>
                   <p class="callback-mail">
-                    <input class="type-text"  type="text" id="callback-text-mail" name="callback-form" placeholder="Ваша почта для ответа?" aria-label="Введите адрес почты." required>
+                    <input class="type-text callback-input-hover"  type="email" id="callback-text-mail" name="callback-form" placeholder="Ваша почта для ответа?" aria-label="Введите адрес почты." required>
                   </p>
                   <p class="callback-area">
-                    <textarea class="type-text callback-text-area"  name="callback-form" id="callback-text-area" cols="30" rows="10" placeholder="Напишите что-нибудь..." aria-label="Напишите что-нибудь."></textarea>
+                    <textarea class="type-text callback-text-area callback-area-hover"  name="callback-form" id="callback-text-area" cols="30" rows="10" placeholder="Напишите что-нибудь..." aria-label="Напишите что-нибудь."></textarea>
                   </p>
                   <button class="button-reset callback-submit btn" type="submit" form="callback-form">Отправить</button>
                 </form>
