Добавляет аутлайн при фокусе на радио слайдера

--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
             <h3 class="visually-hidden">Панель управления слайдером</h3>
 
             <span class="radio-switch">
-              <label class="switch-modify" for="switch1" tabindex="0">
+              <label class="switch-modify" for="switch1">
                 <span class="slider slide-image1">Крем-брюле и пломбир с малиновым джемом</span>
               </label>
-              <label class="switch-modify" for="switch2" tabindex="0">
+              <label class="switch-modify" for="switch2">
                 <span class="slider slide-image2">Шоколадный пломбир и лимонный сорбет</span>
               </label>
-              <label class="switch-modify" for="switch3" tabindex="0">
+              <label class="switch-modify" for="switch3">
                 <span class="slider slide-image3">Пломбир с помадкой и клубничный щербет</span>
               </label>
             </span>
