Добавляет outline для фильтра

--- a/catalog.html
+++ b/catalog.html
@@ -227,19 +227,19 @@
                 <p class="fatty-filter-item">
                   <label class="label-radio" for="0">
                     <input class="input-hidden  radio-filter" type="radio" id="0" value="0" name="fatty" disabled>
-                    <span class="radio-value"  tabindex="0" >0%</span>
+                    <span class="radio-value">0%</span>
                   </label>
                   <label class="label-radio" for="10">
                     <input class="input-hidden radio-filter" type="radio" id="10" value="10" name="fatty" checked>
-                    <span class="radio-value" tabindex="0" >до 10%</span>
+                    <span class="radio-value">до 10%</span>
                   </label>
                   <label class="label-radio">
                     <input class="input-hidden radio-filter" type="radio" id="30" value="30" name="fatty">
-                    <span class="radio-value" tabindex="0" >до 30%</span>
+                    <span class="radio-value">до 30%</span>
                   </label>
                   <label class="label-radio">
                     <input class="input-hidden radio-filter" type="radio" id="over30" value="over30" name="fatty">
-                    <span class="radio-value" tabindex="0" >выше 30%</span>
+                    <span class="radio-value">выше 30%</span>
                   </label>
                 </p>
               </fieldset>
@@ -250,23 +250,23 @@
                 <p class="filler-inner-item">
                   <label class="label-checkbox">
                     <input class="input-hidden checkbox-filter" type="checkbox" id="chocolate" value="chocolate" name="filler" checked>
-                    <span class="checkbox-value" tabindex="0" >шоколадные</span>
+                    <span class="checkbox-value">шоколадные</span>
                   </label>
                   <label class="label-checkbox">
                     <input class="input-hidden checkbox-filter" type="checkbox" id="sugar" value="sugar" name="filler" checked>
-                    <span class="checkbox-value" tabindex="0" >сахарные присыпки</span>
+                    <span class="checkbox-value">сахарные присыпки</span>
                   </label>
                   <label class="label-checkbox">
                     <input class="input-hidden checkbox-filter" type="checkbox" id="fruit" value="fruit" name="filler">
-                    <span class="checkbox-value" tabindex="0" >фрукты</span>
+                    <span class="checkbox-value">фрукты</span>
                   </label>
                   <label class="label-checkbox">
                     <input class="input-hidden checkbox-filter" type="checkbox" id="syrop" value="syrup" name="filler">
-                    <span class="checkbox-value" tabindex="0" >сиропы</span>
+                    <span class="checkbox-value">сиропы</span>
                   </label>
                   <label class="label-checkbox">
                     <input class="input-hidden checkbox-filter" type="checkbox" id="jam" value="jam" name="filler" disabled>
-                    <span class="checkbox-value" tabindex="0" >джемы</span>
+                    <span class="checkbox-value">джемы</span>
                   </label>
                 </p>
                 <button class="button-reset catalog-form-submit" type="submit" form="filter-form">Применить</button>
