добавляет проверку правильности заполнения формы

--- a/index.html
+++ b/index.html
@@ -406,10 +406,10 @@
                 <p class="callback-header">Мы обязательно вам ответим!</p>
                 <form class="callback-form" action="https://echo.htmlacademy.ru/" id="callback-form" method="GET" >
                   <p class="callback-name">
-                    <input class="type-text callback-input-hover"  type="text" id="callback-text-name" name="callback-form" placeholder="Как вас зовут?" aria-label="Введите выше имя." required>
+                    <input class="type-text callback-input-hover"  type="text" id="callback-text-name" name="callback-form" placeholder="Как вас зовут?" aria-label="Введите выше имя.">
                   </p>
                   <p class="callback-mail">
-                    <input class="type-text callback-input-hover"  type="email" id="callback-text-mail" name="callback-form" placeholder="Ваша почта для ответа?" aria-label="Введите адрес почты." required>
+                    <input class="type-text callback-input-hover"  type="email" id="callback-text-mail" name="callback-form" placeholder="Ваша почта для ответа?" aria-label="Введите адрес почты.">
                   </p>
                   <p class="callback-area">
                     <textarea class="type-text callback-text-area callback-area-hover"  name="callback-form" id="callback-text-area" cols="30" rows="10" placeholder="Напишите что-нибудь..." aria-label="Напишите что-нибудь."></textarea>
@@ -423,6 +423,6 @@
       </div>
     </div>
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
-    <script src="js/script.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
