--- a/index.html
+++ b/index.html
@@ -423,6 +423,6 @@
       </div>
     </div>
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
